# CADE

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  Doxyfile  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
pkgdata/arch/: PKGBUILD.in
pkgdata/deb/: control.in
scripts/: test-static.sh
src/: Makefile.am
src/apps/shell/: Makefile.am  main.c
src/apps/shell/classes/: cade-app-menu-button.c  cade-app-menu-button.h  cade-app-menu.c  cade-app-menu.h  cade-app-row.c  cade-app-row.h  cade-app-window.h  cade-panel-window.c  cade-shell-application.c  cade-shell-application.h  cade-window-controller.c  cade-window-controller.h  cade-window-list-element.c  cade-window-list-element.h  cade-window-list.c
src/lib/: Makefile.am  cade-core.h  cade-data.h
src/lib/appmenu/: cade-app-menu-button.c  cade-app-menu-button.h  cade-app-menu.c  cade-app-menu.h  cade-app-row.c  cade-app-row.h
src/lib/core/: cade-panel-window.c  cade-panel-window.h  cade-shell-application.c
src/lib/data/: cade-window-controller.c  cade-window-controller.h
src/lib/factory/: cade-panel-factory.c  cade-panel-factory.h
src/lib/io/: cade-watch-dog.c  cade-watch-dog.h
src/lib/launcher/: cade-panel-launcher.c  cade-panel-launcher.h
src/lib/spacer/: cade-panel-spacer.c  cade-panel-spacer.h
src/lib/ui/: cade-panel-popup-window.c  cade-panel-popup-window.h
src/lib/windowlist/: cade-app-window.c  cade-window-list-element.c  cade-window-list.c  cade-window-list.h  cade-window-preview.c  cade-window-preview.h
