bin_PROGRAMS = cade-shell

cade_shell_SOURCES = main.c classes/cade-shell-application.c classes/cade-panel-window.c classes/cade-app-menu-button.c classes/cade-app-menu.c classes/cade-app-row.c classes/cade-window-controller.c
cade_shell_LDADD = ${GTK3_LIBS} ${GObject_LIBS} $(X11_LIBS)
cade_shell_CFLAGS = ${GTK3_CFLAGS} ${GObject_CFLAGS} $(X11_CFLAGS) -std=c99 
